kubernetes/server/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-marker
  namespace: marker
spec:
  selector:
    matchLabels:
      run: server
  replicas: 1
  template:
    metadata:
      labels:
        run: server
    spec:
      containers:
      - name: server-marker
        image: medinvention/marker-server:0.1.1
        imagePullPolicy: Always
        ports:
          - containerPort: 5000
        volumeMounts:
          - name: maker-data
            mountPath: /var/db
      volumes:
        - name: maker-data
          persistentVolumeClaim:
            claimName: server-marker-pvc
