kubernetes/server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: server-marker-service
spec:
  ports:
  - name: http
    port: 80
    targetPort: 5000
  selector:
    run: server
